# Claudecodedingetjes

./: CLAUDE.md  check-models.py  concept-schaduwagent.md  index.html
.github/ISSUE_TEMPLATE/: nieuwe-les.yml
.github/scripts/: generate-lesson.py  lesson-prompt-deepseek.txt  lesson-prompt.txt
.github/workflows/: check-deepseek-models.yml  generate-lesson.yml  run-check-models.yml
docs/: generate_screenshots.py
poc/: README.md  pyproject.toml  schaduwagent.spec
poc/schaduwagent/: __init__.py  collector.py  config.py  console.py  main.py  session.py  tray.py
rwrw01/: index.html  profile.json
rwrw01/biologie/: index.html
rwrw01/biologie/havo-4/: index.html
rwrw01/biologie/havo-4/plantaardige-en-dierlijke-voedingsstoffen/: index.html  metadata.json
rwrw01/biologie/havo-4/testsub/: index.html  (+1 more)
rwrw01/maatschappijleer/: index.html
rwrw01/maatschappijleer/havo-4/: index.html
rwrw01/maatschappijleer/havo-4-overheid-of-mensen-zelf/: index.html  metadata.json
rwrw01/scheikunde/: index.html
rwrw01/scheikunde/havo-3/: index.html
rwrw01/wiskunde/: index.html
rwrw01/wiskunde/geavanceerd/: index.html
rwrw01/wiskunde/havo-3/: index.html
rwrw01/wiskunde/havo-4/: index.html
rwrw01/wiskunde/onderbouw/: index.html
scheikunde/: index.html
scheikunde/flashcards/: index.html
wiskunde/: index.html
wiskunde/breuken-met-letters/: index.html
wiskunde/grondslagen-getallen/: PLAN.md  index.html  script.js  style.css
wiskunde/rekenen-basis/: index.html
wiskunde/van-getallen-naar-breuken/: index.html
wiskunde/wortelfuncties/: index.html
(+21 files in other folders)
